[workspace]
members = [".", "accursed-unutterable-type-id-derive"]

[package]
name = "accursed-unutterable-type-id"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accursed-unutterable-type-id-derive = { path = "./accursed-unutterable-type-id-derive" }