[package]
name = "accursed-unutterable-type-id-derive"
version = "0.0.0-pre.cursed"
description = "derive macro for accursed-unutterable-type-id"
authors = ["Nilstrieb"]
license = "MIT"
repository = "https://github.com/Nilstrieb/accursed-unutterable-type-id"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fslock = "0.2.1"
quote = "1.0.18"
syn = "1.0.96"
